Fixed navbar spacing for smaller screens

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ p {
   color: var(--text-color);
   text-decoration: none;
   font-size: 3vh;
-  padding: 8px 12px;
+  padding: 8px 1vw;
   transition: color 0.3s, background 0.3s;
 }
 
